--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,11 @@ plugins {
 }
 
 android {
+    namespace 'Projeto.semear'
     compileSdk 35
 
     defaultConfig {
+        applicationId "Projeto.semear"
         minSdk 26
         targetSdk 35
         versionCode 1
@@ -30,8 +32,11 @@ dependencies {
 
     implementation libs.appcompat
     implementation libs.material
+    implementation libs.activity
     implementation libs.constraintlayout
     testImplementation libs.junit
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
